--- a/src/app/jmservices/jmservices.component.html
+++ b/src/app/jmservices/jmservices.component.html
@@ -1,1 +1,10 @@
-<p>jmservices works!</p>
+<button mat-icon-button color="primary" (click)="startMakerService()">
+    <mat-icon>not_started</mat-icon>
+    Start maker
+</button>
+<div *ngIf="makerActive; else elseBlock">
+    Maker is active.
+</div>
+<ng-template #elseBlock>
+    Maker is not currently active.
+</ng-template>
