--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <mat-sidenav-container fullscreen>
     <mat-sidenav #start>
         <mat-nav-list>
-            <a mat-list-item routerLink="/wallet" (click)="start.toggle()">
+        <a mat-list-item routerLink="/generate" (click)="start.toggle()">
+            <mat-icon>library_add</mat-icon>
+            <span>New wallet</span>
+        </a>
+        <a mat-list-item routerLink="/wallet" (click)="start.toggle()">
             <mat-icon>account_balance_wallet</mat-icon>
             <span>Wallet</span>
         </a>
